--- a/_data/rindsschnitzel-in-rotweinsauce.yml
+++ b/_data/rindsschnitzel-in-rotweinsauce.yml
@@ -1,6 +1,6 @@
 zutaten:
  - s: 1 Zwiebel
- - s: 4 Stk. Rindsschnitzel
+ - s: 4 Stk./500g Rindsschnitzel
  - s: 3 EL Mehl
  - s: 250ml Rotwein
  - s: 1/2 Rindsuppenwürfel
