Korrektur Rezept Wiener Saftgulasch

--- a/_data/wiener-saftgulasch.yml
+++ b/_data/wiener-saftgulasch.yml
@@ -40,4 +40,4 @@ zubereitung:
  - s: Den Inhalt der Schüssel mit dem Salz,... dazu geben
  - s: 1-2 Rindsuppenwürfel dazu geben (Je nachdem ob 500ml oder 1L Wasser verwendet wurden)
  - s: Kurz aufkochen lassen
- - s: Temperatur der Herdplatt auf niedrig stellen und ca. 1.5 Stunden köcheln lassen bzw. bis der Saft die gewünschte Würze erreicht hat und/oder das Fleisch weich ist.
+ - s: Temperatur der Herdplatte auf niedrig stellen und ca. 1.5 Stunden köcheln lassen bzw. bis der Saft die gewünschte Würze erreicht hat und/oder das Fleisch weich ist.
