Nährwerte für Knoblauchcremsuppe hinzugefügt

--- a/_data/knoblauchcremesuppe.yml
+++ b/_data/knoblauchcremesuppe.yml
@@ -34,3 +34,15 @@ zubereitung:
  - s: Nach den 10 Minuten 500ml Schlagobers dazu geben (wenn nur 3/4 Wasser verwendet wurde - Ansonst auslassen)
  - s: Den Inhalt der Schüssel mit den verquirlten Eiern einrühren bis diese gestockt sind
  - s: Die Schüssel mit der Petersilie dazu geben und nochmals umrühren
+
+naehrwerte:
+ kalorien: 67.77
+ preis_pro_portion: --
+ menge_pro_portion: ~410
+ fett: 5.42
+ ges_fette: 2.74
+ kohlenhydrate: 3.13
+ zucker: 0.93
+ ballaststoffe: 0.16
+ eiweiss: 1.85
+ salz: 1.27
