--- a/_data/rindsschnitzel-in-rotweinsauce.yml
+++ b/_data/rindsschnitzel-in-rotweinsauce.yml
@@ -30,3 +30,14 @@ zubereitung:
  - s: Deckel auf die Pfanne geben und zugedeckt ca. 2 Stunden weich dünsten
  - s: Fleisch aus der Pfanne nehmen und nochmals in Folie warmstellen
  - s: Die Sauce durch ein Sieb streichen und evt. nachwürzen
+
+naehrwerte:
+ kalorien: 93.45
+ menge_pro_portion: ~675
+ fett: 3.81
+ ges_fette: 0.85
+ kohlenhydrate: 5.05
+ zucker: 3.23
+ ballaststoffe: 0.65
+ eiweiss: 8.46
+ salz: 0.4
