--- a/_data/rindsschnitzel-in-rotweinsauce.yml
+++ b/_data/rindsschnitzel-in-rotweinsauce.yml
@@ -4,7 +4,7 @@ zutaten:
  - s: 3 EL Mehl
  - s: 250ml Rotwein
  - s: 1/2 Rindsuppenwürfel
- - s: 2 Stk. Karotten
+ - s: 130g gewürfelte Karotten (ca 2 Karotten)
  - s: 2 EL Öl
  - s: 1 Prise Salz
  - s: 1 Prise Pfeffer
@@ -13,7 +13,7 @@ vorbereitung:
  - s: Rindsschnitzel waschen und trocken tupfen
  - s: Rindsschnitzel salzen und pfeffern
  - s: 1 Zwiebel in kleine Würfel schneiden und in eine Schüssel geben
- - s: 2 Karotten in kleine Würfel schneiden und in eine Schüssel geben
+ - s: 130g Karottenwürfel in eine Schüssel geben
  - s: 3 EL Mehl in eine Schüssel geben
  - s: 250ml Wasser in ein Glas geben
  - s: 250 ml Rotwein in ein Glas geben
