--- a/_data/fledermaus-pfeffersteak.yml
+++ b/_data/fledermaus-pfeffersteak.yml
@@ -1,6 +1,6 @@
 zutaten:
  - s: Schritt 1
- - s: 2 EL Pfefferkörner
+ - s: 2 EL Pfefferkörner (schwarz, bunt, weiß,...)
  - s: 2 EL Öl
  - s: 2 Zwiebeln
  - s: 2 Knoblauchzehen
