--- a/_data/schinkenfleckerl.yml
+++ b/_data/schinkenfleckerl.yml
@@ -1,4 +1,7 @@
 portionen: 4-5
+zeitaufwandvorbereitung: 12 Minuten
+zeitaufwandzubereitung: 35 Minuten
+gesamtzeitaufwand: 47 Minuten
 
 zutaten:
  - s: 100g Pizzakäse
@@ -16,6 +19,7 @@ vorbereitung:
  - s: 1 Zwiebel würfelig schneiden und in eine Schüssel geben
  - s: 170g Schinken oder Braunschweiger würfelig schneiden und in eine Schüssel geben
  - s: 100g Pizzakäse in eine Schüssel geben
+ - s: 400g Fleckerl in einen Behälter geben
  - s: 1-2 TL Majoran in eine Schüssel geben
  - s: 1 EL getrocknete Petersilie in die Schüssel mit dem Majoran geben
  - s: 1-2 TL Knoblauch in die Schüssel mit dem Majoran,.. geben
