--- a/_data/wiener-saftgulasch.yml
+++ b/_data/wiener-saftgulasch.yml
@@ -16,7 +16,7 @@ zutaten:
  - s: 2 Rindsuppenwürfel
 
 vorbereitung:
- - s: 1 Liter Wasser in ein Gefäß geben
+ - s: 1/2 Liter Wasser in ein Gefäß geben
  - s: 800g Zwiebeln in grobe Würfel/Ringe schneiden und in eine Schüssel geben
  - s: 150ml  Rotwein in ein Glas geben
  - s: 1 TL Salz in eine Schüssel geben
@@ -31,15 +31,16 @@ vorbereitung:
 
 zubereitung:
  - s: 8 EL Öl in einen Topf geben
- - s: Den Inhalt der Schüssel mit den Zwiebelwürfel in den Topf geben und goldgelb rösten
+ - s: 1 Zwiebelwürfel in den Kochtopf geben und warten bis man es bruzzeln hört
+ - s: Den Inhalt der Schüssel mit den restlichen Zwiebelwürfel in den Topf geben und goldgelb rösten
  - s: Den Inhalt der Schüssel mit dem Tomatenmark in den Kochtopf geben und umrühren bis alles homogen rot/orange ist.
  - s: Den Inhalt der Schüssel mit den Knoblauch,... dazu geben und ordentlich umrühren
- - s: Wasser dazu geben bis alles bedeckt ist
+ - s: Den Inhalt des Gefäßes mit den 1/2 Liter Wasser dazu geben. Danach wieder 1/2 Liter Wasser in das Gefäß gebenb
  - s: 15 Minuten verköcheln lassen (Bei Bedarf Wasser dazu leeren)
  - s: Den Inhalt der Schüssel mit dem Rotwein dazu geben und verköcheln lassen
  - s: 1kg Gulaschfleisch dazu geben
- - s: 500ml oder 1L Wasser dazu geben (Bis das ganze Fleisch fast überdeckt ist)
+ - s: 1/2L Wasser dazu geben (Bis das ganze Fleisch fast überdeckt ist)
  - s: Den Inhalt der Schüssel mit dem Salz,... dazu geben
- - s: 1-2 Rindsuppenwürfel dazu geben (Je nachdem ob 500ml oder 1L Wasser verwendet wurden)
+ - s: 1 Rindsuppenwürfel dazu geben (Je nachdem ob 500ml oder 1L Wasser verwendet wurden)
  - s: Kurz aufkochen lassen
  - s: Temperatur der Herdplatte auf niedrig stellen und ca. 1.5 Stunden köcheln lassen bzw. bis der Saft die gewünschte Würze erreicht hat und/oder das Fleisch weich ist.
