--- a/_data/wiener-saftgulasch.yml
+++ b/_data/wiener-saftgulasch.yml
@@ -35,7 +35,7 @@ zubereitung:
  - s: Den Inhalt der Schüssel mit den restlichen Zwiebelwürfel in den Topf geben und goldgelb rösten
  - s: Den Inhalt der Schüssel mit dem Tomatenmark in den Kochtopf geben und umrühren bis alles homogen rot/orange ist.
  - s: Den Inhalt der Schüssel mit den Knoblauch,... dazu geben und ordentlich umrühren
- - s: Den Inhalt des Gefäßes mit den 1/2 Liter Wasser dazu geben. Danach wieder 1/2 Liter Wasser in das Gefäß gebenb
+ - s: Den Inhalt des Gefäßes mit den 1/2 Liter Wasser dazu geben. Danach wieder 1/2 Liter Wasser in das Gefäß geben
  - s: 15 Minuten verköcheln lassen (Bei Bedarf Wasser dazu leeren)
  - s: Den Inhalt der Schüssel mit dem Rotwein dazu geben und verköcheln lassen
  - s: 1kg Gulaschfleisch dazu geben
