--- a/_data/wiener-saftgulasch.yml
+++ b/_data/wiener-saftgulasch.yml
@@ -41,6 +41,6 @@ zubereitung:
  - s: 1kg Gulaschfleisch dazu geben
  - s: 1/2L Wasser dazu geben (Bis das ganze Fleisch fast überdeckt ist)
  - s: Den Inhalt der Schüssel mit dem Salz,... dazu geben
- - s: 1 Rindsuppenwürfel dazu geben (Je nachdem ob 500ml oder 1L Wasser verwendet wurden)
+ - s: 1 Rindsuppenwürfel dazu geben
  - s: Kurz aufkochen lassen
  - s: Temperatur der Herdplatte auf niedrig stellen und ca. 1.5 Stunden köcheln lassen bzw. bis der Saft die gewünschte Würze erreicht hat und/oder das Fleisch weich ist.
