--- a/_data/wiener-saftgulasch.yml
+++ b/_data/wiener-saftgulasch.yml
@@ -1,4 +1,7 @@
 portionen: 4
+zeitaufwandvorbereitung: 20 Minuten
+zeitaufwandzubereitung: 2 Stunden, 45 Minuten
+gesamtzeitaufwand: 3 Stunden, 5 Minuten
 
 zutaten:
  - s: 1kg Gulaschfleisch
