--- a/_data/kartoffelgulasch.yml
+++ b/_data/kartoffelgulasch.yml
@@ -9,7 +9,7 @@ zutaten:
  - s: 500g Kartoffeln
  - s: 2 EL Öl
  - s: 1 Cup (250ml/g) Wasser
- - s: 2-3 Paar Debreziner
+ - s: 2-3 Paar Debreziner (ca. 360g)
 
 vorbereitung:
  - s: 500g Kartoffeln schälen, in daumengroße Stücke schneiden und in eine Schüssel geben.
