--- a/_data/kartoffelgulasch.yml
+++ b/_data/kartoffelgulasch.yml
@@ -1,4 +1,7 @@
 portionen: 2
+zeitaufwandvorbereitung: 8 Min., 20 Sek.
+zeitaufwandzubereitung: 34 Minuten
+gesamtzeitaufwand: 42 Min., 20 Sek.
 
 zutaten:
  - s: 1/2 EL Paprikapulver
@@ -12,26 +15,26 @@ zutaten:
  - s: 2-3 Paar Debreziner (ca. 360g)
 
 vorbereitung:
- - s: 500g Kartoffeln schälen, in daumengroße Stücke schneiden und in eine Schüssel geben.
- - s: 1 Zwiebel schälen, in kleine Würfel schneiden und in eine Schüssel geben
- - s: Die Debreziner in 1/2-1 cm dicke Scheiben schneiden und in eine Schüssel geben
+ - s: 500g Kartoffeln schälen, in daumengroße Stücke schneiden und in eine Schüssel geben. <i class="fa-solid fa-hourglass-end"></i> <span class="badge bg-primary">3 Min., 30 Sek.</span>
+ - s: 1 Zwiebel schälen, in kleine Würfel schneiden und in eine Schüssel geben <i class="fa-solid fa-hourglass-end"></i> <span class="badge bg-primary">1 Min., 50 Sek.</span>
+ - s: Die Debreziner in 1/2-1 cm dicke Scheiben schneiden und in eine Schüssel geben <i class="fa-solid fa-hourglass-end"></i> <span class="badge bg-primary">1 Min., 40 Sek.</span>
  - s: 1/2 EL Paprikapulver in eine kleine Schüssel geben
  - s: 1/2 TL Kümmel in die Schüssel mit dem Paprikapulver geben
  - s: 1 EL Majoran in die Schüssel mit dem Paprikapulver,... geben
  - s: 1 Rindsuppenwürfel über der Schüssel mit dem Paprikapulver,... zerbröseln
+ - s: 1 Cup (250ml/g) Wasser in ein Gefäß geben
 
 zubereitung:
  - s: Den Inhalt der Schüssel mit den Zwiebelwürfel in ein Mikrowellengeschirr geben.
  - s: 2 EL Öl in das Mikrowellengeschirr geben und ordentlich umrühren
  - s: Mikrowelle auf Hohe Leistung / 2 Minuten stellen und starten
  - s: Inhalt des Mikrowellengeschirrs aus der Mikrowelle geben, umrühren und wieder in die Mikrowelle geben
- - s: Die letzten 2 Schritte so lange wiederholen, bis die Zwiebelwürfel karamelisiert sind (goldgelb bis goldbraun)
+ - s: Die letzten 2 Schritte so lange wiederholen, bis die Zwiebelwürfel karamelisiert sind (goldgelb bis goldbraun) - Bei meiner Mikrowelle sind es 3x2 Minuten
  - s: Den Inhalt der Schüssel mit den Kartoffeln in das Mikrowellengeschirr geben
  - s: Den Inhalt der Schüssel mit dem Paprikapulver,... in das Mikrowellengschirr geben und ordentlich umrühren
  - s: Mikrowelle auf Hohe Leistung / 30 Sekunden stellen und starten
- - s: 1 Cup Wasser (250ml/g) in das Mikrowellengeschirr geben und umrühren
+ - s: Den Inhalt des Gefäßes mi dem Wasser in das Mikrowellengeschirr geben und umrühren
  - s: Mikrowelle auf Hohe Leistung / 4 Minuten stellen und starten
  - s: Mikrowellengeschirr raus nehmen und umrühren
- - s: Die letzten 2 Schritte so lange wiederholen, bis die Flüssigkeit eine saucenartige Konsistenz hat, bzw. würzig genug schmeckt
- - s: Den Inhalt der Schüssel mit den Debreziner in das Mikrowellengeschirr geben und den Deckel drauf.
+ - s: Nach 2x 4 Minuten den Inhalt der Schüssel mit den Debreziner in das Mikrowellengeschirr geben und die letzten 2 Schritte so lange wiederholen, bis die Flüssigkeit eine saucenartige Konsistenz hat, bzw. würzig genug schmeckt (Bei meiner Mikrowelle sind es insgesamt 5x4 Minuten)
  - s: Mikrowelle auf Hohe Leistung / 2 Minuten stellen
